updated my personal info

--- a/fugindo-com-python-2.html
+++ b/fugindo-com-python-2.html
@@ -77,29 +77,12 @@
                             <ul class="empty">
                                 <li>Júlio Biason</li>
                                 <li>Azion Technologies<img src="_images/azion-logo.png" alt="Azion logo" class='company-logo'></li>
-                                <li>@juliobiason</li>
+								<li>@juliobiason</li>
+								<li>https://functional.cafe/@juliobiason</li>
                                 <li>julio.biason@gmail.com</li>
                                 <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
                             </ul>
                         </div>
-                    </section>
-
-                    <section>
-                        <img src="_images/start-a-fight.jpg" alt="Eu faço perguntas em reuniões que eu não sei nada e reunião explode; não é de propósito" class='stretch'/>
-
-                        <aside class="notes">
-                            Eu sou famoso (ou era) por entrar eu reuniões, fazer uma
-                            pergunta e a reunião explodir em discussões (úteis, diga-se
-                            de passagem). Mas eu não fazia isso de propósito.
-                        </aside>
-                    </section>
-
-                    <section>
-                        <img src="_images/fast-speaker.jpg" alt="Eu falo rárpido">
-
-                        <aside class="notes">
-                            Eu também tenho costume de falar rápido.
-                        </aside>
                     </section>
                 </section>
 
@@ -1031,37 +1014,46 @@ if __name__ == "__main__":
                 <section data-background='_images/thats-all-folks.jpg'>
                     <section>
                         <h1 class="fragment semi-opaque">Perguntas?</h1>
-                    </section>
-                </section>
-            </div>
-        </div>
 
-        <script src="reveal.js/lib/js/head.min.js"></script>
-        <script src="reveal.js/js/reveal.js"></script>
+						<div class="fragment semi-opaque">
+							<ul>
+								<li>@juliobiason</li>
+								<li>https://functional.cafe/@juliobiason</li>
+                                <li>julio.biason@gmail.com</li>
+                                <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
+							</ul>
+						</div>
+					</section>
+				</section>
+			</div>
+		</div>
 
-        <script>
-            // Full list of configuration options available at:
-            // https://github.com/hakimel/reveal.js#configuration
-            Reveal.initialize({
-                controls: true,
-                progress: true,
-                history: true,
-                center: true,
-                // showNotes: true,
+		<script src="reveal.js/lib/js/head.min.js"></script>
+		<script src="reveal.js/js/reveal.js"></script>
 
-                transition: 'slide', // none/fade/slide/convex/concave/zoom
+		<script>
+			// Full list of configuration options available at:
+			// https://github.com/hakimel/reveal.js#configuration
+			Reveal.initialize({
+				controls: true,
+				progress: true,
+				history: true,
+				center: true,
+				// showNotes: true,
 
-                // Optional reveal.js plugins
-                dependencies: [
-                    { src: 'reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
-                    { src: 'reveal.js/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-                    { src: 'reveal.js/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-                    { src: 'reveal.js/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-                    { src: 'reveal.js/plugin/zoom-js/zoom.js', async: true },
-                    { src: 'reveal.js/plugin/notes/notes.js', async: true }
-                ]
-            });
-        </script>
+				transition: 'slide', // none/fade/slide/convex/concave/zoom
 
-    </body>
+				// Optional reveal.js plugins
+				dependencies: [
+					{ src: 'reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
+					{ src: 'reveal.js/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'reveal.js/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'reveal.js/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: 'reveal.js/plugin/zoom-js/zoom.js', async: true },
+					{ src: 'reveal.js/plugin/notes/notes.js', async: true }
+				]
+			});
+		</script>
+
+	</body>
 </html>
