--- a/porque-como-opensource.html
+++ b/porque-como-opensource.html
@@ -69,32 +69,12 @@
                                 <li>Júlio Biason</li>
 								<li><img src="_images/azion-logo.png" alt="Azion logo" class='company-logo'>Azion Technologies</li>
                                 <li>@juliobiason</li>
+								<li>https://functional.cafe/@juliobiason</li>
                                 <li>julio.biason@gmail.com</li>
                                 <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
                             </ul>
                         </div>
                     </section>
-
-                    <section>
-                        <img src="_images/start-a-fight.jpg" alt="Eu faço perguntas em reuniões que eu não sei nada e reunião explode; não é de propósito" class='stretch'/>
-
-						<aside class="notes">
-							Eu sou famoso (ou era) por entrar eu reuniões, fazer uma
-							pergunta e a reunião explodir em discussões (úteis, diga-se
-							de passagem). Mas eu não fazia isso de propósito.
-						</aside>
-                    </section>
-
-					<section>
-						<img src="_images/fast-speaker.jpg" alt="Eu falo rárpido">
-
-						<aside class="notes">
-							Eu também tenho costume de falar rápido.
-							Essa apresentação talvez termine em menos de
-							20 minutos, mas eu deixo mais tempo para as
-							perguntas dessa forma.
-						</aside>
-					</section>
                 </section>
 
                 <section>
@@ -525,6 +505,15 @@
                 <section data-background='_images/thats-all-folks.jpg'>
                     <section>
                         <h1 class="fragment semi-opaque">Perguntas?</h1>
+
+						<div class="fragment semi-opaque">
+							<ul>
+								<li>@juliobiason</li>
+								<li>https://functional.cafe/@juliobiason</li>
+                                <li>julio.biason@gmail.com</li>
+                                <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
+							</ul>
+						</div>
                     </section>
                 </section>
             </div>
