put the last presentation in the index

--- a/filosofando-testes.html
+++ b/filosofando-testes.html
@@ -55,8 +55,7 @@
         <div class="reveal">
             <div class="slides">
                 <section>
-                    <!-- <section data-header> -->
-                    <section data-background="_images/tdd-kentbeck-book.jpg">
+                    <section data-background="_images/tdd-kentbeck-book.jpg" data-header>
                         <h1 class="semi-opaque">Filosofando sobre Testes</h1>
                     </section>
                 </section>
