--- a/intro-stream-processing.html
+++ b/intro-stream-processing.html
@@ -251,6 +251,16 @@
                         <img src="_images/streamprocessing-kafka.png" alt="Kafka Logo" style="float:left;width:200px;margin:50px;" class="no-border">
                         <img src="_images/streamprocessing-rabbitmq.png" alt="RabbitMQ Logo" style="float:left;width:200px;margin:50px;" class="no-border">
                         <img src="_images/streamprocessing-sqs.png" alt="AWS SQS Logo" style="float:left;width:200px;margin:50px;" class="no-border">
+                        <img src="_images/streamprocessing-zeromq.gif" alt="ZeroMQ Logo" style="float:left;width:200px;margin:50px;" class="no-border">
+
+						<aside class="notes">
+							Os Mesage Brokers mais usados são:
+
+							- Apache Kafka
+							- RabbitMQ
+							- SQS (dentro da Amazon)
+							- ZeroMQ
+						</aside>
 					</section>
 				</section>
 
