Updated edge map

--- a/intro-stream-processing.html
+++ b/intro-stream-processing.html
@@ -382,6 +382,8 @@ light.switch()</code></pre>
                             porque cada vez que é chamada adiciona um novo
                             registro na tabela.
                         </aside>
+
+                        <pre class="fragment"><code>random()</code></pre>
                     </section>
 
                     <section>
